[package]
name = "keyhog-sources"
description = "keyhog-sources: pluggable input backends for KeyHog (git, S3, GCS, Azure Blob, Docker, Web)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-sources"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[package.metadata.santh]
status = "alpha"

[features]
default = ["git", "web"]
git = ["gix"]
# `dep:serde` / `dep:serde_json` removed from these feature gates —
# they're unconditional now (serde for the HAR parser in
# filesystem.rs::har, which is in the always-on path).
#
# `keyhog-verifier` is pulled in by web, hosted git, and s3 so WebSource and
# hosted clone SSRF gates delegate to the fleet-canonical URL/IP classifier and
# S3 request signing delegates to the single SigV4 owner instead of carrying
# source-local forks.
web = ["dep:reqwest", "dep:keyhog-verifier", "dep:brotli"]
github = ["dep:reqwest", "dep:tempfile", "dep:keyhog-verifier"]
gitlab = [
    "dep:reqwest",
    "dep:tempfile",
    "dep:urlencoding",
    "dep:keyhog-verifier",
]
bitbucket = ["dep:reqwest", "dep:tempfile", "dep:keyhog-verifier"]
slack = ["dep:reqwest"]
azure = [
    "dep:reqwest",
    "dep:quick-xml",
    "dep:urlencoding",
    # SSRF endpoint host-screen in `cloud::parse_http_endpoint` delegates to the
    # canonical `keyhog_verifier::ssrf::is_private_url` classifier.
    "dep:keyhog-verifier",
]
gcs = [
    "dep:reqwest",
    "dep:urlencoding",
    # SSRF endpoint host-screen in `cloud::parse_http_endpoint` delegates to the
    # canonical `keyhog_verifier::ssrf::is_private_url` classifier.
    "dep:keyhog-verifier",
]
s3 = [
    "dep:reqwest",
    "dep:quick-xml",
    "dep:urlencoding",
    "dep:keyhog-verifier",
]
# `tar` is now an unconditional dependency (used by the always-on filesystem
# tarball-unpack path), so the docker feature only pulls in its workspace and
# subprocess timeout support.
docker = ["dep:tempfile", "dep:wait-timeout"]
binary = ["dep:goblin", "dep:tempfile", "dep:glob", "dep:wait-timeout"]  # ELF/PE/Mach-O + Ghidra decompiler

[dependencies]
keyhog-core = { workspace = true }
# Canonical SSRF IP classifier lives here as `keyhog_verifier::ssrf`
# (which composes the fast reserved-range checks with
# `bogon::ip_addr_is_bogon`); canonical SigV4 signing lives here as
# `keyhog_verifier::sigv4`. Gated under the features that consume those owners.
# No dependency cycle: keyhog-verifier depends only on keyhog-core, never on
# keyhog-sources.
keyhog-verifier = { workspace = true, optional = true }
codewalk = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
toml = { workspace = true }
# Concurrent dedup/seen-path maps in the always-on filesystem walker
# (`filesystem.rs`). Was previously only present transitively via other
# workspace members, so reduced-feature builds (e.g. `--features ci`) failed
# to resolve the `dashmap` import. Declared directly here so every feature
# combination compiles.
dashmap = { workspace = true }
gix = { workspace = true, optional = true }
memmap2 = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
ziftsieve = { workspace = true, features = ["gzip", "lz4", "zstd", "snappy"] }
openpack = { workspace = true, features = ["zip", "apk", "ipa", "crx"] }
zip = "2.2"
rars = { workspace = true }
# True-decompression decoders for the always-on filesystem compressed-input
# path (filesystem/extract.rs). ziftsieve only extracts DEFLATE literals for
# its bloom prefilter (drops back-references), so it cannot reconstruct the
# real decompressed bytes the scanner needs — these do the full inflate.
flate2 = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
snap = { workspace = true }
bzip2 = { workspace = true }
xz2 = { workspace = true }
# Optional WebSource Content-Encoding decoder for `br` responses. Reqwest
# auto-decompression stays disabled; WebSource owns the explicit decoded-size
# cap before scanning.
brotli = { workspace = true, optional = true }
sevenz-rust2 = { workspace = true }
# `tar` is non-optional (NOT just the `docker` feature) because the always-on
# filesystem path untars gzip(tar)/.tgz/.tar containers per-entry so a secret
# in a tarball is scanned with the correct inner path. The `docker` feature
# reuses the same dependency.
tar = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
# Binary analysis dependencies
goblin = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
wait-timeout = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }

# Feature-gated optional deps. Previously declared inside the
# `[target.cfg(target_os = "linux")]` block, which silently scoped
# them to Linux only — every `web` / `github` / `s3` / `gcs` / `docker` /
# `binary` build on Windows or macOS failed with `unresolved
# import reqwest`. They need to be declared at workspace scope so
# all OSes that activate the corresponding feature can resolve them.
[dependencies.reqwest]
workspace = true
optional = true
features = ["blocking"]

[dependencies.base64]
workspace = true
# Non-optional: har.rs decodes base64-encoded HAR response bodies
# (`content.encoding == "base64"`, HAR 1.2 spec) on the always-on
# filesystem path, same rationale as the unconditional serde dep below.

[dependencies.serde]
workspace = true
features = ["derive"]
# `har::HarDocument` derive uses serde unconditionally — the HAR
# expansion in filesystem.rs is part of the always-on filesystem
# source path. The `web`/`github`/`slack` features that previously
# pulled in serde optionally now share this unconditional dep.

[dependencies.serde_json]
workspace = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.quick-xml]
workspace = true
optional = true

[dependencies.urlencoding]
workspace = true
optional = true

[dependencies.unicode-normalization]
workspace = true

[dev-dependencies]
flate2 = "1"
httpmock = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }
sevenz-rust2 = { workspace = true, features = ["compress"] }

[[test]]
name = "s3_ambient_credential_forward"
path = "tests/s3_ambient_credential_forward.rs"
required-features = ["s3"]

[[test]]
name = "regression_azure_blob_object_drops_counted"
path = "tests/regression_azure_blob_object_drops_counted.rs"
required-features = ["azure"]

[[test]]
name = "regression_gcs_object_drops_counted"
path = "tests/regression_gcs_object_drops_counted.rs"
required-features = ["gcs"]

[[test]]
name = "regression_web_response_gaps_counted"
path = "tests/regression_web_response_gaps_counted.rs"
required-features = ["web"]

[[test]]
name = "regression_s3_skipped_objects_counted"
path = "tests/regression_s3_skipped_objects_counted.rs"
required-features = ["s3"]

[[test]]
name = "regression_cloud_ssrf_endpoint_guard"
path = "tests/regression_cloud_ssrf_endpoint_guard.rs"
required-features = ["s3"]

[[test]]
name = "regression_git_blob_drops_counted"
path = "tests/regression_git_blob_drops_counted.rs"
required-features = ["git"]

[[test]]
name = "regression_binary_unreadable_counted"
path = "tests/regression_binary_unreadable_counted.rs"
required-features = ["binary"]

[[test]]
name = "docker_oci_classification"
path = "tests/docker_oci_classification.rs"
required-features = ["docker"]
